# goalrush

./: README.md  main.py  pyproject.toml
competitions/: admin.py  forms.py  models.py  services.py  urls.py  views.py
competitions/migrations/: 0001_initial.py  0002_league.py  0003_leaguemembership_alter_league_join_code_and_more.py  0004_leagueinvite.py  0005_league_is_locked.py  0006_delete_leagueinvite.py  0007_remove_league_unique_league_per_season_competition_and_more.py
competitions/templates/: base.html
competitions/templates/competitions/: join_league.html  league_create.html  league_detail.html  league_list.html
config/: settings.py  urls.py
gameweeks/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
gameweeks/migrations/: 0001_initial.py  0002_gameweek_competition_gameweek_created_at_and_more.py  0003_remove_gameweek_unique_gameweek_per_competition_season_and_more.py
gameweeks/templates/gameweeks/: league_gameweek_create.html  league_gameweek_list.html
matches/: admin.py  models.py
matches/migrations/: 0001_initial.py
selections/: admin.py  forms.py  models.py  selections.py  services.py  urls.py  validators.py  views.py
selections/migrations/: 0001_initial.py  0002_pick.py  0003_remove_pick_selections__user_id_b9d632_idx_and_more.py
selections/templatetags/: pick_extras.py
services/: api_client.py  supabase.py  sync_fixtures.py  sync_results.py  sync_teams.py
users/: admin.py  models.py
users/migrations/: 0001_initial.py  0002_leaguemembership.py  0003_remove_leaguemembership_unique_user_per_league_and_more.py
(+2 files in other folders)
